# glot-app

./: .gitignore  Cargo.toml  README.md  deploy.sh  post_build.sh  routes.poly  run_dev.sh
.github/workflows/: deploy_cloudflare_release.yaml
functions/: index.js
functions/new/: [language].js
glot_cli/: Cargo.toml
glot_cli/src/: main.rs
glot_cloudflare/: .dev.vars.example  .gitignore  _redirects  _routes.json  package-lock.json  package.json  run_dev.sh
glot_cloudflare/functions/: [[page]].ts  index.js  index.ts
glot_cloudflare/functions/account/: login.ts
glot_cloudflare/functions/account/login/: magiclink.ts
glot_cloudflare/functions/api/: run.ts  snippets.ts
glot_cloudflare/functions/api/magiclink/: login.ts  send.ts
glot_cloudflare/functions/api/snippets/: [id].ts
glot_cloudflare/functions/internal-api/: run.ts
glot_cloudflare/functions/new/: [language].js  [language].ts
glot_cloudflare/functions/snippets/: [id].ts
glot_cloudflare/migrations/: 0000_initial.sql
glot_cloudflare/scripts/: migrations.ts
glot_cloudflare/src/: crypto.ts  magiclink.ts  random.ts  session.ts  snippet.ts  user.ts
glot_cloudflare_rate_limiter/: package.json
glot_cloudflare_rate_limiter/src/: index.ts  rate_limiter.ts
glot_cloudflare_request_counter/: package-lock.json  package.json
glot_cloudflare_request_counter/src/: index.ts  request_counter.ts
glot_core/: Cargo.toml  build.rs
glot_core/src/: ace_editor.rs  home_page.rs  language.rs  lib.rs  magic_link_login_page.rs  run.rs  snippet.rs  snippet_page.rs
glot_core/src/common/: browser_context.rs  keyboard_shortcut.rs  mod.rs  quick_action.rs  route.rs
glot_core/src/components/: file_modal.rs  mod.rs  search_modal.rs  settings_modal.rs  sharing_modal.rs  stdin_modal.rs  title_modal.rs
glot_core/src/icons/: heroicons.rs  mod.rs
glot_core/src/language/: assembly.rs  ats.rs  bash.rs  c.rs  clisp.rs  clojure.rs  cobol.rs  coffeescript.rs  cpp.rs  crystal.rs  csharp.rs  d.rs  dart.rs  elixir.rs  elm.rs  erlang.rs  fsharp.rs  go.rs  groovy.rs  guile.rs  hare.rs  haskell.rs  idris.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mercury.rs  nim.rs  nix.rs  ocaml.rs  pascal.rs  perl.rs  php.rs  python.rs  raku.rs  ruby.rs  rust.rs  sac.rs  (+4 more)
glot_core/src/layout/: app_layout.rs  mod.rs
glot_core/src/page/: home_page.rs  login_page.rs  mod.rs  not_found_page.rs  snippet_page.rs
glot_core/src/page/snippet_page/: output_panel.rs  quick_action.rs
glot_core/src/util/: file_util.rs  mod.rs  remote_data.rs  select_list.rs  user_agent.rs  zip_list.rs
glot_core/src/view/: dropdown.rs  features.rs  language_grid.rs  mod.rs  modal.rs  svg.rs
glot_wasm/: Cargo.toml
glot_wasm/src/: home_page.rs  lib.rs  login_page.rs  magic_link_login_page.rs  not_found_page.rs  router.rs  snippet_page.rs
glot_web/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
glot_web/css/: app.css
glot_web/src/: api.ts  app.ts  home_page.ts  login_page.ts  magic_link_login_page.ts  snippet_page.ts  sw.ts
