[package]
name = "glot_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glot_core = { path = "../glot_core" }
polyester = { git = "https://github.com/polyester-web/polyester-rs" }
polyester_macro = { git = "https://github.com/polyester-web/polyester-rs" }
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }